# starrynite_py

./: .gitignore  GPU_SETUP.md  README.md  activate_gpu.sh  pyproject.toml
configs/: btrack_cell.json  nih_dispim.yaml
source_code/distribution_code/: assignPlanesDirectional.m  assign_planes.m  calculateSliceGFP.m  calculateSphereDiameters_geometric.m  closenessFilterRemovingIsolated.m  createDiskSet.m  evaluate_lineage_error.m  findOverlookedNuclei.m  integrateGFP.m  loadCellStack.m  mergeScore2.m  processSequence.asv  processSequence.m  processVolume.asv  processVolume.m  readnuclei.m  readnuclei_allfields.m  resolveConflicts.m
source_code/distribution_lineaging/: FindFNplayers.asv  FindFNplayers.m  assembleBifurcationData.m  calculateCellTripleVector.m  calculateWideWindowCellPairVectorNondivision.m  computeConfidenceRecursive.m  computeNonDivisionConfidenceVector.m  compute_singlemodel_classificationerror.m  divDistanceCostFunction.asv  divDistanceCostFunction.m  extractTrainingConfidenceDataVectors.m  findBackwardCandidatesTime.m  findBackwardCandidatesTime_NN.m  findForwardCandidatesTime.m  greedyEndScore.asv  greedyEndScore.m  greedydeleteFPbranches.m  initializeTrackingStructures.m  linkEasyCases.m  matchLineageWithoutDeleted.m  multiple_embryo_train.m  output_unlineaged_acetree.m  parameterConfiguration.m  predictBifurcationType.m  predictBifurcationTypeSinglemodel.m  processOtherBifurcation.m  saveGreedyNucleiFiles.m  scoreLinkConfidence.m  (+3 more)
starrynite/: __init__.py  cli.py  pipeline.py
starrynite_py/: cli.py  pipeline.py
tests/: conftest.py  test_io.py
(+35 files in other folders)
